// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrayOfTemplate should match the normalizr-arrayOfTemplate-schema 1`] = `
ArraySchema {
  "schema": EntitySchema {
    "_getId": [Function],
    "_idAttribute": "id",
    "_key": "templates",
    "_mergeStrategy": [Function],
    "_processStrategy": [Function],
    "schema": Object {
      "idAttribute": "id",
    },
  },
}
`;

exports[`template schema should match the normalizr-template-schema 1`] = `
EntitySchema {
  "_getId": [Function],
  "_idAttribute": "id",
  "_key": "templates",
  "_mergeStrategy": [Function],
  "_processStrategy": [Function],
  "schema": Object {
    "idAttribute": "id",
  },
}
`;
